--- a/App-Enclave/Makefile
+++ b/App-Enclave/Makefile
@@ -32,7 +32,7 @@
 ######## SGX SDK Settings ########
 
 
-SGX_SDK ?= /opt/intel/sgxsdk
+SGX_SDK ?= /opt/intel2/sgxsdk
 SGX_MODE ?= HW
 SGX_ARCH ?= x64
 SGX_DEBUG ?= 1
@@ -79,8 +79,8 @@ else
 	Urts_Library_Name := sgx_urts
 endif
 
-App_C_Files := App/App.c App/ccom/ccom.c 
-App_Include_Paths := -IApp -I$(SGX_SDK)/include -IApp/ccom -IEnclave
+App_C_Files := App/App.c App/ccom/ccom.c  App/decentralize/decentralize.c App/rs/rs.c App/aes/aes.c	
+App_Include_Paths := -IApp -I$(SGX_SDK)/include -IApp/ccom -IEnclave -IApp/decentralize -IApp/rs -IApp/aes -I/usr/local/include/jerasure -L/usr/local/lib
 
 App_C_Flags := -fPIC -Wno-attributes $(App_Include_Paths)
 
@@ -96,7 +96,7 @@ else
         App_C_Flags += -DNDEBUG -UEDEBUG -UDEBUG
 endif
 
-App_Link_Flags := -L$(SGX_LIBRARY_PATH) -l$(Urts_Library_Name) -lpthread 
+App_Link_Flags := -L$(SGX_LIBRARY_PATH) -l$(Urts_Library_Name) -lpthread -lssl -lcrypto -lJerasure -lgf_complete
 
 App_C_Objects := $(App_C_Files:.c=.o)
 
@@ -124,7 +124,7 @@ endif
 Crypto_Library_Name := sgx_tcrypto
 
 Enclave_C_Files := Enclave/Enclave.c Enclave/eccDH/ecdh.c Enclave/cpor/cpor.c Enclave/aes/aes.c Enclave/sha/sha1.c Enclave/hmac/hmac_sha1.c Enclave/prp/prp.c
-Enclave_Include_Paths := -IEnclave -I$(SGX_SDK)/include -I$(SGX_SDK)/include/libcxx -I$(SGX_SDK)/include/tlibc -IEnclave/eccDH -IEnclave/cpor -I/opt/intel/sgxssl/Linux/package/include -IEnclave/hmac -IEnclave/sha -IEnclave/aes -IEnclave/prp -I/usr/local/include 
+Enclave_Include_Paths := -IEnclave -I$(SGX_SDK)/include -I$(SGX_SDK)/include/libcxx -I$(SGX_SDK)/include/tlibc -IEnclave/eccDH -IEnclave/cpor -I/opt/intel2/sgxssl/Linux/package/include -IEnclave/hmac -IEnclave/sha -IEnclave/aes -IEnclave/prp -I/usr/local/include -I/usr/local/include/jerasure
 
 Enclave_C_Flags := -nostdinc -fvisibility=hidden -fpie -fstack-protector -fno-builtin-printf $(Enclave_Include_Paths)
 
@@ -142,7 +142,7 @@ Enclave_Security_Link_Flags := -Wl,-z,relro,-z,now,-z,noexecstack
 
 Enclave_Link_Flags := $(Enclave_Security_Link_Flags) \
     -Wl,--no-undefined -nostdlib -nodefaultlibs -nostartfiles -L$(SGX_LIBRARY_PATH)  \
-	-L/opt/intel/sgxssl/Linux/package/lib64 -Wl,--whole-archive -lsgx_tsgxssl -Wl,--no-whole-archive \
+	-L/opt/intel2/sgxssl/Linux/package/lib64 -Wl,--whole-archive -lsgx_tsgxssl -Wl,--no-whole-archive \
 	-lsgx_tsgxssl_crypto \
 	-Wl,--whole-archive -l$(Trts_Library_Name) -Wl,--no-whole-archive \
 	-Wl,--start-group -lsgx_pthread -lsgx_tstdc -lsgx_tcxx -l$(Crypto_Library_Name) -l$(Service_Library_Name) -lm -Wl,--end-group \
@@ -150,7 +150,7 @@ Enclave_Link_Flags := $(Enclave_Security_Link_Flags) \
 	-Wl,-pie,-eenclave_entry -Wl,--export-dynamic  \
 	-Wl,--defsym,__ImageBase=0 \
 	-Wl,--version-script=$(Enclave_Version_Script) \
-	-lrs -lfec
+	-lfec -L/usr/local/lib -lJerasure -lgf_complete
 
  
 
