--- a/App-Enclave/.gitignore
+++ b/App-Enclave/.gitignore
@@ -4,3 +4,11 @@
 *.so.unsigned
 *.so.signed.debug
 *.so.unsigned.debug
+.config_HW_DEBUG_x64
+App/Enclave_u.c
+App/Enclave_u.h
+Enclave/Enclave_private_test.pem
+Enclave/Enclave_t.c
+Enclave/Enclave_t.h
+App/decentralize/chunks/*
+app
