change retrive file

--- a/App-Enclave/Makefile
+++ b/App-Enclave/Makefile
@@ -291,5 +291,5 @@ endif
 .PHONY: clean
 
 clean:
-	@rm -f .config_* $(App_Name) $(Enclave_Name) $(Signed_Enclave_Name) $(App_C_Objects) App/Enclave_u.* $(Enclave_C_Objects) Enclave/Enclave_t.* $(Enclave_Test_Key) App/decentralize/chunks/*
+	@rm -f .config_* $(App_Name) $(Enclave_Name) $(Signed_Enclave_Name) $(App_C_Objects) App/Enclave_u.* $(Enclave_C_Objects) Enclave/Enclave_t.* $(Enclave_Test_Key) App/decentralize/chunks/* ./recovered.bin
 
