calibrate the erasure coding

--- a/App-Enclave/Makefile
+++ b/App-Enclave/Makefile
@@ -82,8 +82,8 @@ else
 	Urts_Library_Name := sgx_urts
 endif
 
-App_C_Files := App/App.c App/ccom/ccom.c  App/decentralize/decentralize.c App/rs/prgshuffle/prgshuffle.c App/rs/rs.c App/aes/aes.c App/prp/prp.c App/eccDH/ecdh.c App/decentralize/prng.c App/hmac/hmac_sha2.c
-App_Include_Paths := -IApp -I$(SGX_SDK)/include -IApp/ccom -IEnclave -IApp/decentralize -IApp/rs -IApp/aes -IApp/prp -IApp/eccDH -I/usr/local/include/jerasure -L/usr/local/lib -IApp/hmac
+App_C_Files := App/App.c App/ccom/ccom.c  App/decentralize/decentralize.c App/rs/prgshuffle/prgshuffle.c App/rs/rs.c App/grouping/gp.c App/aes/aes.c App/prp/prp.c App/eccDH/ecdh.c App/decentralize/prng.c App/hmac/hmac_sha2.c
+App_Include_Paths := -IApp -I$(SGX_SDK)/include -IApp/ccom -IEnclave -IApp/decentralize -IApp/rs -IApp/grouping -IApp/aes -IApp/prp -IApp/eccDH -I/usr/local/include/jerasure -L/usr/local/lib -IApp/hmac
 
 App_C_Flags := -fPIC -Wno-attributes $(App_Include_Paths)
 
