feat-plain-file

--- a/App-Enclave/Makefile
+++ b/App-Enclave/Makefile
@@ -32,7 +32,7 @@
 ######## SGX SDK Settings ########
 
 
-SGX_SDK ?= /opt/intel/sgxsdk
+SGX_SDK ?= /opt/intel2/sgxsdk
 SGX_MODE ?= HW
 SGX_ARCH ?= x64
 SGX_DEBUG ?= 1
@@ -128,7 +128,7 @@ endif
 Crypto_Library_Name := sgx_tcrypto
 
 Enclave_C_Files := Enclave/Enclave.c Enclave/eccDH/ecdh.c Enclave/cpor/cpor.c Enclave/aes/aes.c Enclave/grouping/gp.c Enclave/rs/rs.c Enclave/rs/galois.c Enclave/sha/sha1.c Enclave/hmac/hmac_sha1.c Enclave/hmac/hmac_sha2.c Enclave/prp/prp.c Enclave/rs/gf.c Enclave/rs/gf_w16.c Enclave/rs/gf_wgen.c Enclave/rs/gf_cpu.c Enclave/rs/gf_w8.c Enclave/rs/gf_w32.c Enclave/rs/gf_w4.c
-Enclave_Include_Paths := -IEnclave/rs -IEnclave -I$(SGX_SDK)/include -I$(SGX_SDK)/include/libcxx -I$(SGX_SDK)/include/tlibc -IEnclave/eccDH -IEnclave/cpor -IEnclave/grouping -I/opt/intel/sgxssl/Linux/package/include -IEnclave/hmac -IEnclave/sha -IEnclave/aes -IEnclave/prp -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/12/include
+Enclave_Include_Paths := -IEnclave/rs -IEnclave -I$(SGX_SDK)/include -I$(SGX_SDK)/include/libcxx -I$(SGX_SDK)/include/tlibc -IEnclave/eccDH -IEnclave/cpor -IEnclave/grouping -I/opt/intel2/sgxssl/Linux/package/include -IEnclave/hmac -IEnclave/sha -IEnclave/aes -IEnclave/prp -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/12/include
 
 Enclave_C_Flags := -nostdinc -fvisibility=hidden -fpie -fstack-protector -fno-builtin-printf -Wno-pointer-sign $(Enclave_Include_Paths)
 
@@ -147,7 +147,7 @@ Enclave_Security_Link_Flags := -Wl,-z,relro,-z,now,-z,noexecstack
 
 Enclave_Link_Flags := $(Enclave_Security_Link_Flags) \
     -Wl,--no-undefined -nostdlib -nodefaultlibs -nostartfiles -L$(SGX_LIBRARY_PATH)  \
-	-L/opt/intel/sgxssl/Linux/package/lib64 -Wl,--whole-archive -lsgx_tsgxssl -Wl,--no-whole-archive \
+	-L/opt/intel2/sgxssl/Linux/package/lib64 -Wl,--whole-archive -lsgx_tsgxssl -Wl,--no-whole-archive \
 	-lsgx_tsgxssl_crypto \
 	-Wl,--whole-archive -l$(Trts_Library_Name) -Wl,--no-whole-archive \
 	-Wl,--start-group -lsgx_pthread -lsgx_tstdc -lsgx_tcxx -l$(Crypto_Library_Name) -l$(Service_Library_Name) -lm -Wl,--end-group \
